--- a/public/testpiano.css
+++ b/public/testpiano.css
@@ -8,13 +8,15 @@ body{
     justify-content: flex-end;
     align-items: center;
     height: 100%;
+    background-color: #4CAF50;
 }
 .piano{
     position: absolute;
     bottom: 10px;
-    width: 448px;
+    width: 896px;
     height: 33.333%;
     display: flex;
+    background-color: white;
 }
 .white{
     width: 64px;
@@ -41,4 +43,19 @@ body{
 }
 #a{
     left: 372px;
+}
+#c2{
+    left: 500px;
+}
+#d2{
+    left: 564px
+}
+#f2{
+    left: 692px;
+}
+#g2{
+    left: 754px;
+}
+#a2{
+    left: 818px;
 }
