--- a/public/testpiano.css
+++ b/public/testpiano.css
@@ -8,7 +8,7 @@ body{
     justify-content: flex-end;
     align-items: center;
     height: 100%;
-    background-color: #4CAF50;
+    background-color: darkslategrey;
 }
 .piano{
     position: absolute;
